# otus_homework_3_allocator

./: .clang-format  .editorconfig  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  cncc.style
cpack_script/: postinst
include/: CLParser.h  allocator.h  factorial.h  forward_list.h  lib_version.h  tchar_dummy.h
src/: CMakeLists.txt  main.cpp
src_lib/: CLParser.cpp  CMakeLists.txt  lib_version.cpp  tchar_dummy.cpp
src_test/: CMakeLists.txt  test_allocator.cpp
